--- a/PerfectLife.html
+++ b/PerfectLife.html
@@ -19,6 +19,7 @@
             <object class="perfectLife-flash" width="1280" height="720">
                 <param name="movie" value="DressUp.swf">
                 <param name="movie" value="PerfectLife.swf">
+                <param name="movie" value="DressUp_loader.swf">
                 <embed src="PerfectLife_loader.swf" width="1280" height="720">
                 </embed>
             </object>
